--- a/index.html
+++ b/index.html
@@ -205,7 +205,6 @@
     </div>
   </div>
 </div>
-
 <section class="essence">
   <div class="container">
     <div class="row">
@@ -244,7 +243,8 @@
         </div>
         <p class="grey-text">Сооснователь и соучредитель сети фирменных
           магазинов автозапчастей «Руль», 31 год</p>
-        <p class="essence__right-col-text">Правильная бизнес-стратегия за 8 лет превратила магазин с наличием 450 тысяч рублей в сеть магазинов с
+        <p class="essence__right-col-text">Правильная бизнес-стратегия за 8 лет превратила магазин с наличием 450 тысяч
+          рублей в сеть магазинов с
           наличием товара на сумму более 30 миллионов рублей с собственным автотехцентром без привлечения кредитных
           средств.</p>
         <ul class="essence__list">
@@ -276,7 +276,8 @@
           Мы торгуем автозапчастями для иномарок всех популярных моделей и не ограничиваемся сегментом
           иномарками одной страны, мы мультибрендовый магазин. В наше время, учитывая сложную политическую ситуацию, это
           является неоспоримым преимуществом на данном рынке.</p>
-        <p class="subtitle pt-md-0"> Мы работаем только с проверенными и надежными поставщиками, мы уверены за качество нашего товара.
+        <p class="subtitle pt-md-0"> Мы работаем только с проверенными и надежными поставщиками, мы уверены за качество
+          нашего товара.
         </p>
       </div>
     </div>
@@ -347,7 +348,8 @@
         </p>
         <p>Мы помогаем людям в разных жизненных сценариях: помочь своевременно с запчастями, автосервисам починить
           клиентский автомобиль, снабдив запчастями из наличия, а так же вовремя реагируем на новые автомобильные
-          законы и людям это нравится, например, в 2017 году лидером по продажам был знак «Шипы» <span class="icon">Ш</span> .</p>
+          законы и людям это нравится, например, в 2017 году лидером по продажам был знак «Шипы» <span
+            class="icon">Ш</span> .</p>
       </div>
     </div>
     <div class="row care-list">
@@ -388,67 +390,71 @@
   </div>
 
 </div>
-<section>
+<section class="get">
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <h2>Что вы получите?</h2>
+        <h2 class="bottom-line">Что вы получите?</h2>
         <p class="subtitle">
           Мы, как никто другой, знаем, как важная поддержка на старте в бизнесе, нам так её не хватало в далеком 2008
           году. Наша задача сегодня — помочь вам не совершить банальных ошибок, которые так больно отражаются на
           бизнес-счете предпринимателя. Давайте разберемся с основными аспектами нашего будущего сотрудничества:
         </p>
-        <h3>Поможем с подбором помещения</h3>
-        <p>Со слов Чичваркина, основателя сети «Евросеть», залог успеха ритейла это: Location,
+        <h3 class="left-square">Поможем с подбором помещения</h3>
+        <p class="subtitle pl-30">Со слов Чичваркина, основателя сети «Евросеть», залог успеха ритейла это: Location,
           location и … location. </p>
-        <p>Мы на собственном опыте знаем, как это важно и как будет тяжело, если совершить ошибку
+        <p class="pl-30">Мы на собственном опыте знаем, как это важно и как будет тяжело, если совершить ошибку
           на старте, выбрав плохое место.</p>
-        <ul>
+        <ul class="pt-30 pl-30">
           <li>Расскажем как правильно подобрать помещение</li>
           <li>Проведем аудит всех подобранных вами помещений</li>
           <li>Не дадим вам подписать документы на аренду с невыгодными условиями</li>
           <li>Поможем провести переговоды с арендодателем для снижения оплаты</li>
         </ul>
-        <p>Кроме этого, после успешных переговоров и подписания документов, мы разработаем
+        <p class="pt-30 pl-30">Кроме этого, после успешных переговоров и подписания документов, мы разработаем
           планировочное решение торгового зала и склада, дадим рекомендации по ремонту,
           подскажем как не ошибиться в выборе подрядчика. </p>
-        <div class="d-flex">
-          <div class="col-md-6"><img src="#" alt="фото"></div>
-          <div class="col-md-6"><img src="#" alt="фото"></div>
+        <div class="d-flex pt-30">
+          <div class="col-md-6 get__image-warehouse"><img src="/img/get1.jpg" alt="фото" width="350"></div>
+          <div class="col-md-6"><img src="/img/get2.jpg" alt="фото" width="290"></div>
         </div>
-        <p>В итоге, после проведения косметических ремонтных работ, вы получите готовые
+        <p class="subtitle--bold">В итоге, после проведения косметических ремонтных работ, вы получите готовые
           торговые и складские площади для начала деятельности ритейлера автозапчастей. </p>
       </div>
-      <div class="col-md-4">
-        <div class="">
+      <div class="col-md-4 get-asside">
+        <div class="get-asside__yellow">
           <h3>Поможем заключить
             выгодный договор</h3>
-          <div>Наши юристы проинспектиую документы по аренде и не дадут
+          <div class="get-asside__yellow-description pb-30">Наши юристы проинспектиую документы по аренде и не дадут
             вас обмануть.
           </div>
         </div>
-        <button>Запросить смету</button>
+        <p class="pl-30 pr-30 pb-30 text-center">Если у вас уже есть собственное
+          помещение или вы в процессе
+          подписание документов, отправьте нам заявку и мы составим вам предвариельную смету на ваш будущий
+          магазин. </p>
+        <button class="get__button">Запросить смету</button>
       </div>
     </div>
   </div>
 </section>
 <section class="installation">
   <div class="container">
-    <div class=row>
-      <div class="col-md-8">
-        <h2>Поставим и смонтируем все
-          необходимое для открытия магазина</h2>
+    <div class="row installation-top">
+      <div class="col-md-8 installation-top__left-col">
+        <h3>Поставим и смонтируем все
+          необходимое для открытия магазина</h3>
         <p>Кроме этого, после успешных переговоров и подписания документов, мы разработаем
           планировочное решение торгового зала и склада. </p>
 
       </div>
-      <div class="col-md-4">
-        <h2>Вы получите свой
-          магазин «Под ключ»</h2>
+      <div class="col-md-4 installation-top__right-col">
+        <h3 class="pb-30 ">Вы получите свой
+          магазин «Под ключ»</h3>
         <button>Запросить смету</button>
       </div>
     </div>
-    <div class="row">
+    <div class="row installation-bottom">
       <div class="col-md-3">
         <h4>Все для обустройства торгового зала</h4>
         <ul class="installation__list">
@@ -496,153 +502,166 @@
         </ul>
       </div>
     </div>
-    <div class="">
-      <button>Запросить смету</button>
-      <button>Узнать подробнее</button>
+    <div class="row installation__buttons">
+      <div class="col-md-4 offset-2">
+        <button class="ml-30">Запросить смету</button>
+      </div>
+      <div class="col-md-4">
+        <button class="btn-white mr-30">Узнать подробнее</button>
+      </div>
     </div>
   </div>
 </section>
 <section class="technologies">
   <div class="container">
-    <div class="row">
-      <div class="col-md-8">
-        <h2>Даём наши передовые
+    <div class="row pb-30">
+      <div class="col-md-8 pb-30">
+        <h2 class="bottom-line">Даём наши передовые
           технологии вам!</h2>
-        <p class="subtitle">
+        <h3 class="left-square">
           Откроем доступ к автоматизированной
           системе владения и управления
           магазином автозапчастей
-        </p>
-        <p>Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью
+        </h3>
+        <p class="subtitle pl-30">Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью
           опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров
           и кладовщиков до руковдителя! </p>
 
       </div>
-      <div class="col-md-4">
-        <img src="" alt="лого 1с">
-        <h3>Конфигурация «руль»</h3>
-        <p>Для менеджеров
+      <div class="col-md-4 technologies-aside">
+        <img src="/img/technologies/logo1c.png" alt="лого 1с" width="350">
+        <h4 class="technologies-aside__title pb-15">Конфигурация «руль»</h4>
+        <p class="technologies-aside__subtitle">Для менеджеров
           по продажам, кладовщиков
           и руковдителя</p>
       </div>
     </div>
-    <div class="row">
+    <div class="row pb-30">
       <div class="col-md-8">
-        <img src="" alt="screen">
+        <img src="/img/technologies/s1.jpg" width="730" alt="screen">
       </div>
       <div class="col-md-4">
-        <p class="screen-description">
+        <p class="technologies__screen-description">
           Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже
           запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
           кладовщиков до руковдителя!
         </p>
-        <a href="">Посмотреть Демо-ролик</a>
+        <a href="#" class="technologies__screen-link">
+          <img src="/img/technologies/play-button.svg" alt="" width="56">
+          <p class="technologies__screen-link-description">Посмотреть Демо-ролик <span>45 секунд</span></p>
+        </a>
       </div>
     </div>
-    <div class="row">
+    <div class="row pb-30">
       <div class="col-md-8">
-        <img src="" alt="screen">
+        <img src="/img/technologies/s2.jpg" width="730" alt="screen">
       </div>
       <div class="col-md-4">
-        <p class="screen-description">
+        <p class="technologies__screen-description">
           Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже
           запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
           кладовщиков до руковдителя!
         </p>
-        <a href="">Посмотреть Демо-ролик</a>
+        <a href="#" class="technologies__screen-link">
+          <img src="/img/technologies/play-button.svg" alt="" width="56">
+          <p class="technologies__screen-link-description">Посмотреть Демо-ролик <span>45 секунд</span></p>
+        </a>
       </div>
     </div>
-    <div class="row">
+    <div class="row pb-30">
       <div class="col-md-8">
-        <img src="" alt="screen">
+        <img src="/img/technologies/s3.jpg" width="730" alt="screen">
       </div>
       <div class="col-md-4">
-        <p class="screen-description">
+        <p class="technologies__screen-description">
           Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже
           запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
           кладовщиков до руковдителя!
         </p>
-        <a href="">Посмотреть Демо-ролик</a>
+        <a href="#" class="technologies__screen-link">
+          <img src="/img/technologies/play-button.svg" alt="" width="56">
+          <p class="technologies__screen-link-description">Посмотреть Демо-ролик <span>45 секунд</span></p>
+        </a>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-4">
-        <h4 class="technolodies-item-title">
+    <div class="row technologies__bottom">
+      <div class="col-md-4 technolodies__bottom-item">
+        <h4 class="technologies__bottom-title">
           Подбор запчастей
         </h4>
-        <p class="technolodies-item-description">
+        <p class="technologies__bottom-description">
           Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
           отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
         </p>
       </div>
-      <div class="col-md-4">
-        <h4 class="technolodies-item-title">
+      <div class="col-md-4 technolodies__bottom-item">
+        <h4 class="technologies__bottom-title">
           Грамотная работа с остатками
         </h4>
-        <p class="technolodies-item-description">
+        <p class="technologies__bottom-description">
           Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
           отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
         </p>
       </div>
-      <div class="col-md-4">
-        <h4 class="technolodies-item-title">
+      <div class="col-md-4 technolodies__bottom-item">
+        <h4 class="technologies__bottom-title">
           Увеличение среднего чека
         </h4>
-        <p class="technolodies-item-description">
+        <p class="technologies__bottom-description">
           Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
           отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
         </p>
       </div>
-      <div class="col-md-4">
-        <h4 class="technolodies-item-title">
+      <div class="col-md-4 technolodies__bottom-item">
+        <h4 class="technologies__bottom-title">
           Максимализация прибыли
         </h4>
-        <p class="technolodies-item-description">
+        <p class="technologies__bottom-description">
           Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
           отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
         </p>
       </div>
-      <div class="col-md-4">
-        <h4 class="technolodies-item-title">
+      <div class="col-md-4 technolodies__bottom-item">
+        <h4 class="technologies__bottom-title">
           Лояльность клиентов
         </h4>
-        <p class="technolodies-item-description">
+        <p class="technologies__bottom-description">
           Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
           отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
         </p>
       </div>
-      <div class="col-md-4">
-        <h4 class="technolodies-item-title">
+      <div class="col-md-4 technolodies__bottom-item">
+        <h4 class="technologies__bottom-title">
           Контроль прироста склада
         </h4>
-        <p class="technolodies-item-description">
+        <p class="technologies__bottom-description">
           Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
           отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
         </p>
       </div>
-      <div class="col-md-4">
-        <h4 class="technolodies-item-title">
+      <div class="col-md-4 technolodies__bottom-item">
+        <h4 class="technologies__bottom-title">
           Мотивация продавцов
         </h4>
-        <p class="technolodies-item-description">
+        <p class="technologies__bottom-description">
           Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
           отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
         </p>
       </div>
-      <div class="col-md-4">
-        <h4 class="technolodies-item-title">
+      <div class="col-md-4 technolodies__bottom-item">
+        <h4 class="technologies__bottom-title">
           BIG DATA
         </h4>
-        <p class="technolodies-item-description">
+        <p class="technologies__bottom-description">
           Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
           отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
         </p>
       </div>
-      <div class="col-md-4">
-        <h4 class="technolodies-item-title">
+      <div class="col-md-4 technolodies__bottom-item">
+        <h4 class="technologies__bottom-title">
           Системы аналитики
         </h4>
-        <p class="technolodies-item-description">
+        <p class="technologies__bottom-description">
           Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную
           отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
         </p>
