--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h2 class="bottom-line pb-1">Автолюбители покупауют
+        <h2 class="bottom-line">Автолюбители покупауют
           у нас не из-за цен</h2>
         <p class="subtitle subtitle--bold">
           Наш продукт — не только автозапчасти, но и все остальное, что её окружает. Мы создаём светлый
@@ -673,40 +673,42 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2>Полная презентация системы</h2>
-        <p class="subtitle">
+        <h2 class="bottom-line">Полная презентация системы</h2>
+        <h3>
           Запросите полноценную презентацию системы,
           чтобы по-настоящему оценить богатейший функционал
-        </p>
+        </h3>
         <p>Нашим потенциальным франчайзи, которые уже подписали договор мы с гордостью покажем и расскажем как работать
           с нашей базой знаний, а так же дадим доступ к закрытой Базе знаний с архивом обучающих видео по нашей
           системе. </p>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-2">
-        <img src="" alt="img">
+    <div class="row presentation__list">
+      <div class="col-md-2 presentation__item">
+        <img src="/img/presentation/presentation1.jpg" class="presentation__img" width="164" alt="img">
       </div>
-      <div class="col-md-2">
-        <img src="" alt="img">
+      <div class="col-md-2 presentation__item">
+        <img src="/img/presentation/presentation2.jpg" class="presentation__img" width="164" alt="img">
       </div>
-      <div class="col-md-2">
-        <img src="" alt="img">
+      <div class="col-md-2 presentation__item">
+        <img src="/img/presentation/presentation3.jpg" class="presentation__img" width="164" alt="img">
       </div>
-      <div class="col-md-2">
-        <img src="" alt="img">
+      <div class="col-md-2 presentation__item">
+        <img src="/img/presentation/presentation4.jpg" class="presentation__img" width="164" alt="img">
       </div>
-      <div class="col-md-2">
-        <img src="" alt="img">
+      <div class="col-md-2 presentation__item">
+        <img src="/img/presentation/presentation5.jpg" class="presentation__img" width="164" alt="img">
       </div>
-      <div class="col-md-2">
-        <img src="" alt="img">
+      <div class="col-md-2 presentation__item">
+        <img src="/img/presentation/presentation6.jpg" class="presentation__img" width="164" alt="img">
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-4">
+    <div class="row pt-30">
+      <div class="col-md-5">
         <button>Заказать презентацию системы</button>
-        <div class="descr">
+      </div>
+      <div class="col-md-4">
+        <div class="pl-15">
           Доступно только для покупателей
           франшизы «Руль»
         </div>
@@ -718,48 +720,48 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <h2>
+        <h2 class="bottom-line">
           Закроем раз и навсегда
           вопрос с персоналом
         </h2>
-        <h3 class="">Откроем серкет, как быстро найти
+        <h3 class="left-square">Откроем серкет, как быстро найти
           квалифицированный персонал</h3>
-        <p>Мы знаем как быстро найти кандидатов на должность менеджеров, кладовщика. И главное, как найти
+        <p class="pl-30">Мы знаем как быстро найти кандидатов на должность менеджеров, кладовщика. И главное, как найти
           квалифицированных кандидатов, которые и будут приносить вам прибыль. </p>
-        <h3>Поможем провести собеседование
+        <h3 class="left-square">Поможем провести собеседование
           с кандидатом и дать свои рекомендации</h3>
-        <p>Понять насколько опытный кандидат пришел на собеседование поможет наш опросный лист, специально
+        <p class="pl-30">Понять насколько опытный кандидат пришел на собеседование поможет наш опросный лист, специально
           подготовленный и отточенный для решения такой задачи. Но, тем не менее, мы можем провести Skype-собеседование
           и набрать для вас «Команду мечты» на время старта. </p>
-        <h3>После набора «Команды мечты» мы
+        <h3 class="left-square">После набора «Команды мечты» мы
           пригласим вас вместе на обучение в наш
           тренинговый центр</h3>
-        <p>Понять насколько опытный кандидат пришел на собеседование поможет наш опросный лист, специально
+        <p class="pl-30">Понять насколько опытный кандидат пришел на собеседование поможет наш опросный лист, специально
           подготовленный и отточенный для решения такой задачи. Но, тем не мнее, мы можем провести Skype-собеседование и
           набрать для вас «Команду мечты» на время старта. </p>
       </div>
-      <div class="col-md-4">
-        <h4>Обучим не только
+      <div class="col-md-4 pl-30 personal-aside">
+        <h3>Обучим не только
           персонал, но и вас
           правильно работать
-          с персоналом!</h4>
-        <ul>
-          <li class="personal-list">
+          с персоналом!</h3>
+        <ul class="personal-aside__list">
+          <li class="personal-aside___item">
             Как сделать так, чтобы люди хотели работать у вас!
           </li>
-          <li class="personal-list">
+          <li class="personal-aside___item">
             Как замотивировать продавцов работать эффективнее с каждым днем!
           </li>
-          <li class="personal-list">
+          <li class="personal-aside___item">
             Какие KPI влияют на результат работы персонала!
           </li>
-          <li class="personal-list">
+          <li class="personal-aside___item">
             Расскажем 9 золоты правил продаж, которые позволя менеджерам продавать лучше
           </li>
-          <li class="personal-list">
+          <li class="personal-aside___item">
             Почему у вас не будет текучки и почему персонал будет вас любить
           </li>
-          <li class="personal-list">
+          <li class="personal-aside___item">
             Как менеджер может стать другом руководителю и работать как для себя
           </li>
         </ul>
